--- a/options.html
+++ b/options.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>VATonator - Settings</title>
+  <title>VATopia - Settings</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -157,7 +157,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>VATonator Settings</h1>
+    <h1>VATopia Settings</h1>
     
     <div class="section">
       <h2>VAT Rate Configuration</h2>
