--- a/popup.html
+++ b/popup.html
@@ -18,9 +18,18 @@
       </div>
     </div>
     <div class="vat-rate">
-      <label class="vat-label" for="vatRate">VAT Rate:</label>
-      <select class="vat-form-control" id="vatRate">
-      </select>
+      <div class="vat-rate-selectors">
+        <div class="vat-region-wrapper">
+          <label class="vat-label" for="vatRegion">Region:</label>
+          <select class="vat-form-control vat-region-select" id="vatRegion">
+          </select>
+        </div>
+        <div class="vat-country-wrapper">
+          <label class="vat-label" for="vatRate">Country:</label>
+          <select class="vat-form-control vat-country-select" id="vatRate" disabled>
+          </select>
+        </div>
+      </div>
       
       <div class="vat-custom-rate" id="customRateDiv" style="display: none;">
         <label class="vat-label">Custom VAT Rate:</label>
