--- a/popup.html
+++ b/popup.html
@@ -17,7 +17,42 @@
         Extension is disabled<span class="vat-status-dot"></span>
       </div>
     </div>
+    <div class="vat-gradient-line"></div>
+    <div class="vat-calculator" id="vatCalculator" style="display: none;">
+      <div class="vat-section-header">
+        <img src="icons/calculator.svg" alt="Calculator" class="vat-section-header-icon">
+        <h3 class="vat-section-header-title">Calculator</h3>
+      </div>
+      <div class="vat-calculator-mode">
+        <label class="vat-label">
+          <input class="vat-checkbox" type="checkbox" id="calculatorBruttoMode">
+          Calculate from brutto (gross)
+        </label>
+      </div>
+      <div class="vat-calculator-inputs">
+        <div class="vat-calculator-amount-wrapper">
+          <label class="vat-label" for="calculatorAmount">Amount:</label>
+          <input class="vat-form-control vat-calculator-amount" type="number" id="calculatorAmount" step="0.01" placeholder="0.00" value="1.29">
+        </div>
+        <div class="vat-calculator-vat-wrapper">
+          <label class="vat-label" for="calculatorVatRate">VAT:</label>
+          <div class="vat-calculator-vat-input-wrapper">
+            <input class="vat-form-control vat-calculator-vat" type="number" id="calculatorVatRate" min="1" max="100" step="0.1" placeholder="23">
+            <span class="vat-calculator-percent">%</span>
+          </div>
+        </div>
+      </div>
+      <div class="vat-calculator-result">
+        <div class="vat-calculator-result-label" id="calculatorResultLabel">Netto:</div>
+        <div class="vat-calculator-result-value" id="calculatorResultValue">0.00</div>
+      </div>
+      <div class="vat-gradient-line"></div>
+    </div>
     <div class="vat-rate">
+      <div class="vat-section-header">
+        <img src="icons/gauge-high.svg" alt="Settings" class="vat-section-header-icon">
+        <h3 class="vat-section-header-title">Quick Settings</h3>
+      </div>
       <div class="vat-rate-selectors">
         <div class="vat-region-wrapper">
           <label class="vat-label" for="vatRegion">Region:</label>
